--- a/engine/pre-alpha/12/index.html
+++ b/engine/pre-alpha/12/index.html
@@ -91,6 +91,7 @@
 		<script src="/ecs/js/UVsDebug.js"></script>
 		<script src="/ecs/js/FBXLoader.js"></script>
 		<script src="/ecs/js/VirtualInput.js"></script>
+		<script src="/ecs/js/KeyboardState.js"></script>
 		<script src="/ecs/js/EditorControls.js"></script>
 		<script src="/ecs/js/SubdivisionModifier.js"></script>
 		<script src="/ecs/js/three-pathfinding.umd.js"></script>
@@ -100,18 +101,226 @@
 		<script src="/threejs/r96/examples/js/exporters/OBJExporter.js"></script>
 		<script src="/threejs/r96/examples/js/exporters/ColladaExporter.js"></script>
 
-		<script src="/ecs/js/KeyboardState.js"></script>
 		<script src="/ecs/engine/Enviroment.js"></script>
-		<script src="/ecs/engine/pre-alpha/Entity.js"></script>
+	<!-- script src="/ecs/engine/pre-alpha/Entity.js"></script -->
+		<script src="/ecs/entities/localPlayer.js"></script>
 
 		<script>
 
+			debugMode = true;
 
+		//	Global helpers.
 
+			Number.prototype.format = function (){
+				return this.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1,");
+			};
 
+		//	save_file.js
+			function saveString( text, filename ) {
+				save( new Blob( [ text ], { type: "text/plain" } ), filename );
+			}
+
+			function saveArrayBuffer( buffer, filename ) {
+				save( new Blob( [ buffer ], { type: "application/octet-stream" } ), filename );
+			}
+
+			function save( blob, filename ) {
+
+				var link = document.createElement( "a" );
+				link.href = URL.createObjectURL( blob );
+				link.download = filename || "untitled";
+				link.click();
+
+			}
+
+		//	round.js
+			function round(number, precision) {
+				var shift = function (number, precision, reverseShift) {
+					if (reverseShift) {
+						precision = -precision;
+					}  
+					numArray = ("" + number).split("e");
+					return +(numArray[0] + "e" + (numArray[1] ? (+numArray[1] + precision) : precision));
+				};
+				return shift(Math.round(shift(number, precision, false)), precision, true);
+			}
+
+		//	array_move.js
+			function array_move( arr, old_index, new_index ){
+
+				if (new_index >= arr.length) {
+					var k = new_index - arr.length + 1;
+					while (k--) {
+						arr.push(undefined);
+					}
+				}
+
+				arr.splice(new_index, 0, arr.splice(old_index, 1)[0]);
+			}
+
+		//	deep_copy.js
+			function deepCopy(obj) {
+				if (Object.prototype.toString.call(obj) === "[object Array]") {
+					var out = [], i = 0, len = obj.length;
+					for ( ; i < len; i++ ) {
+						out[i] = arguments.callee(obj[i]);
+					}
+				//	console.log("out:", out);
+					return out;
+				}
+				if (typeof obj === "object") {
+					var out = {}, i;
+					for ( i in obj ) {
+						out[i] = arguments.callee(obj[i]);
+					}
+				//	console.log("out:", out);
+					return out;
+				}
+				return obj;
+			}
+
+			function copyObject(obj) {
+
+			//	1. copy has same prototype as orig
+				var copy = Object.create(Object.getPrototypeOf(obj));
+
+			//	2. copy has all of orig’s properties
+				copyOwnPropertiesFrom(copy, obj);
+
+				return copy; // warning: shallow copy!
+
+			//	The properties are copied from orig to copy via this function:
+
+				function copyOwnPropertiesFrom(target, source) {
+					Object.getOwnPropertyNames(source).forEach(function(propKey) {
+						var desc = Object.getOwnPropertyDescriptor(source, propKey);
+						Object.defineProperty(target, propKey, desc);
+					});
+					return target;
+				};
+
+			}
+
+			function quaternionFromNormal( normal, quaternion ){
+
+				return setDirection(normal, quaternion);
+
+				function setDirection(normal, quaternion) {
+					quaternion = quaternion || new THREE.Quaternion();
+				//	vector is assumed to be normalized.
+					if (normal.y > 0.99999) {
+						quaternion.set(0, 0, 0, 1);
+					} else if (normal.y < -0.99999) {
+						quaternion.set(1, 0, 0, 0);
+					} else {
+						var axis = new THREE.Vector3();
+						axis.set(normal.z, 0, -normal.x).normalize();
+						var radians = Math.acos(normal.y);
+						quaternion.setFromAxisAngle(axis, radians);
+					}
+
+					return quaternion;
+				}
+			}
 
 		</script>
 
+		<script>
+
+		//	Singals.js
+
+			const Signal = signals.Signal;
+
+		</script>
+
+		<script>
+
+		//	TabUI.
+
+			(function(){
+
+				var sidePanel = createSidePanel();
+				document.body.appendChild( sidePanel );
+
+				var loginTab = TabUI.add( "Login", "login-tab" );
+				var debugTab = TabUI.add( "Debug", "debug-tab" );
+				var levelTab = TabUI.add( "Levels", "level-tab" );
+				var editorTab = TabUI.add( "Editor", "editor-tab" );
+				var cameraTab = TabUI.add( "Camera", "camera-tab" );
+				var controlTab = TabUI.add( "Controls", "control-tab" );
+				var playersTab = TabUI.add( "Players", "players-tab" );
+				var materialTab = TabUI.add( "Materials", "material-tab" );
+				var animationTab = TabUI.add( "Animations", "animation-tab" );
+
+				TabUI.append("Editor", "Controls", "Camera", "Players", "Animations", "Materials", "Levels", "Debug" );
+				TabUI.Editor.role.classList.add("active");
+				TabUI.Editor.tab.classList.add("in","active");
+
+			})();
+
+		</script>
+
+		<script>
+/*
+		//	localPlayer controller.
+			
+			const localPlayer = (function(){
+
+				var radius = 0.85;
+
+			//	local player.
+				var player = (function(){
+					var player = new THREE.Object3D();
+					player.position.set( 0, 0, 0 );
+					player.name = "localPlayer";
+					scene.add( player );
+					return player;
+				})();
+
+			//	Player helper.
+				var helper = (function( r ){
+					var sphere = new THREE.SphereGeometry( r, 8, 6 );
+					var geometry = new THREE.EdgesGeometry( sphere );
+					var material = new THREE.LineBasicMaterial( { color: 0x00ff00 } );
+					var segments = new THREE.LineSegments( geometry, material );
+					segments.name = "playerhelper";
+					return segments;
+				})( radius );
+
+				player.add( helper );
+
+			//	Player controller.
+				var characterController = (function( object, radius ){
+					var controller = new MW.CharacterController( object, radius );
+					controller.movementSpeed = 10;
+					controller.maxSlopeGradient = 0.5;
+					controller.center.set(0, 1, 0);
+					world.add( controller );
+					return controller;
+				})( player, radius );
+
+				player.controller = characterController;
+
+			//	Update rotation.
+				(function update(){
+					player.requestFrameID = requestAnimationFrame( update );
+					player.rotation.y = characterController.direction + Math.PI;
+				})();
+
+			//	Take CameraLight control.
+				takeCameraLight( player );
+
+				return player;
+			})();
+*/
+		//	Helpers.
+
+			function takeCameraControls( target, offset ){
+				cameraControls.trackObject = target;
+				cameraControls.offset.y = offset || 0;
+			}
+
+		</script>
 
 	</body>
 </html>
