--- a/engine/pre-alpha/13/index.html
+++ b/engine/pre-alpha/13/index.html
@@ -102,6 +102,7 @@
 		<script src="/threejs/r96/examples/js/exporters/ColladaExporter.js"></script>
 
 		<script src="/ecs/engine/Enviroment.js"></script>
+		<script src="/ecs/engine/core/entity.js"></script>
 		<script src="/ecs/engine/core/localPlayer.js"></script>
 		<script src="/ecs/engine/core/cameraControls.js"></script>
 		<script src="/ecs/engine/core/keyboardState.js"></script>
@@ -205,6 +206,27 @@
 
 			}
 
+		//	three-quaternion-from-normal.
+		//	Builds a ThreeJS quaternion from a normal vector.
+		//	This is useful for getting meshes to 'point' in the direction of a vector.
+
+		//	Usage: quat = quaternionFromNormal(normal, [quaternionTarget])
+		//	Builds a quaternion from the normal (a normalized THREE.Vector3), 
+		//	storing the result in quaternionTarget (a THREE.Quaternion) 
+		//	or creating a new quaternion object if no target is specified.
+		//	The quaternion target is returned.
+
+		//	Example:
+		//	Say we want mesh to point from A to B point.
+			//	var A = new THREE.Vector3(1, 0, 0);
+			//	var B = new THREE.Vector3(2, 5,-1);
+		//	Get normal A->B.
+			//	var normal = B.clone().sub(A).normalize();
+		//	Get orientation.
+			//	var quaternion = quaternionFromNormal(normal);
+		//	Apply orientation to mesh.
+			//	mesh.quaternion.copy(quaternion);
+
 			function quaternionFromNormal( normal, quaternion ){
 
 				return setDirection(normal, quaternion);
@@ -225,13 +247,6 @@
 
 					return quaternion;
 				}
-			}
-
-		//	Helpers.
-
-			function takeCameraControls( target, offset ){
-				cameraControls.trackObject = target;
-				cameraControls.offset.y = offset || 0;
 			}
 
 		</script>
@@ -265,6 +280,10 @@
 
 		<script>
 
+			localPlayer.controller.movementSpeed = 10;
+
+		//	Entities.
+
 			debugMode && (function(){
 				var geometry = new THREE.BoxGeometry();
 				var material = new THREE.MeshLambertMaterial();
@@ -272,24 +291,300 @@
 				localPlayer.add( cube );
 			})();
 
-		//	bod coluction.
-			debugMode && (function(){
-				var box = new THREE.BoxGeometry(10,10,10);
-				octree.importThreeMesh( new THREE.Mesh(box) );
-				var geometry = new THREE.EdgesGeometry( box );
+
+		//	box coluctions.
+			(function(){
 				var material = new THREE.LineBasicMaterial( { color: 0x00ff00 } );
-				var segments = new THREE.LineSegments( geometry, material );
-				scene.add( segments );
+
+				(function(){
+					var w = 10; var h = 5;
+					var box = new THREE.BoxGeometry(w,h,w);
+					box.translate(0, h/2, 0);
+				//	box.rotateX(Math.PI/6);
+					octree.importThreeMesh( new THREE.Mesh(box) );
+					var geometry = new THREE.EdgesGeometry( box );
+					var segments = new THREE.LineSegments( geometry, material );
+					entities.push({id: segments.id});
+					scene.add( segments );
+				})();
+
+				(function(){
+					var w = 10, h = 20;
+					var x = 10, y = h/2, z = -4;
+					var box = new THREE.BoxGeometry(w,h,w);
+					box.translate(x, y, z);
+					octree.importThreeMesh( new THREE.Mesh(box) );
+					var geometry = new THREE.EdgesGeometry( box );
+					var segments = new THREE.LineSegments( geometry, material );
+					entities.push({id: segments.id});
+					scene.add( segments );
+				})();
+
+				(function(){
+					var w = 12, h = 10;
+					var x = 11, y = h/2, z = -10;
+					var box = new THREE.BoxGeometry(w,h,w);
+					box.translate(x, y, z);
+					octree.importThreeMesh( new THREE.Mesh(box) );
+					var geometry = new THREE.EdgesGeometry( box );
+					var segments = new THREE.LineSegments( geometry, material );
+					entities.push({id: segments.id});
+					scene.add( segments );
+				})();
+
+				(function(){
+					var w = 8, h = 10;
+					var x = -10, y = h/2, z = 10;
+					var box = new THREE.BoxGeometry(w,h,w);
+					box.translate(x, y, z);
+					octree.importThreeMesh( new THREE.Mesh(box) );
+					var geometry = new THREE.EdgesGeometry( box );
+					var segments = new THREE.LineSegments( geometry, material );
+					entities.push({id: segments.id});
+					scene.add( segments );
+				})();
+
+				(function(){
+					var w = 12, h = 20, d = 2;
+					var x = -14, y = h/2, z = 10;
+					var box = new THREE.BoxGeometry(w,h,d);
+					box.translate(x, y, z);
+					octree.importThreeMesh( new THREE.Mesh(box) );
+					var geometry = new THREE.EdgesGeometry( box );
+					var segments = new THREE.LineSegments( geometry, material );
+					entities.push({id: segments.id});
+					scene.add( segments );
+				})();
+
+				(function(){
+					var w = 4, h = 20, d = 20;
+					var x = -17, y = h/2, z = 12;
+					var box = new THREE.BoxGeometry(w,h,d);
+					box.translate(x, y, z);
+					octree.importThreeMesh( new THREE.Mesh(box) );
+					var geometry = new THREE.EdgesGeometry( box );
+					var segments = new THREE.LineSegments( geometry, material );
+					entities.push({id: segments.id});
+					scene.add( segments );
+				})();
+
+
 			})();
 
 		//	var material = new THREE.MeshLambertMaterial({side:1});
 		//	var mesh = new THREE.Mesh(geometry, material);
 		//	scene.add( mesh );
 
+			(function(){
+				localPlayer.traverse(function( child ){
+					entities.push({id: child.id});
+				});
+			})();
+
 		</script>
 
 		<script>
 
+		//	Editor systems.
+
+			const axisX = new THREE.Vector3(1,0,0);
+			const axisY = new THREE.Vector3(0,1,0);
+			const axisZ = new THREE.Vector3(0,0,1);
+			const keyboard = new KeyboardState();
+			const keyCodes = keyboard.keyCodes;
+
+		//	!!! SOS !!!  VERY IMPORTANT! !!! SOS !!!
+
+			function translateOnScreenAxis( object ){
+			//	(from MW character controller).
+			//	var rad = 3 * Math.PI/2 // joystick input.
+				var rad = 2 * Math.PI;  // keyboard input.
+				var movementSpeed = 0.05; // (m/fps) => 5cm/fps
+				var cameraFrontAngle = SystemManager.cameraControls.frontAngle;
+				var keyboardFrontAngle = SystemManager.keyboard.frontAngle;
+				var direction = rad - cameraFrontAngle + keyboardFrontAngle;
+				var directionOnAxisX = -Math.sin(direction);
+				var directionOnAxisZ = -Math.cos(direction);
+				var x = directionOnAxisX * movementSpeed;
+				var z = directionOnAxisZ * movementSpeed;
+				var velocity = new THREE.Vector3(x,0,z);
+				object.position.x += velocity.x; 
+				object.position.z += velocity.z;
+			}
+
+		//	var E = keyCodes[69];  var Q = keyCodes[81]; //  key "E",    key "Q"
+		//	var D = keyCodes[68];  var A = keyCodes[65]; //  key "D",    key "A"
+		//	var W = keyCodes[87];  var S = keyCodes[83]; //  key "W",    key "S"
+		//	var R = keyCodes[82];  var F = keyCodes[70]; //  key "R",    key "F"
+		//	var Z = keyCodes[90];  var X = keyCodes[88]; //  key "Z",    key "X"
+		//	var C = keyCodes[67];  var V = keyCodes[86]; //  key "C",    key "V"
+
+		//	var up       = keyCodes[33] || keyCodes[69]; // "page UP"     or "E"
+		//	var down     = keyCodes[34] || keyCodes[81]; // "page DOWN"   or "Q"
+		//	var left     = keyCodes[37] || keyCodes[68]; // "arrow LEFT"  or "D"
+		//	var right    = keyCodes[39] || keyCodes[65]; // "arrow RIGHT" or "A"
+		//	var forwards = keyCodes[38] || keyCodes[87]; // "arrow UP"    or "W"
+		//	var backward = keyCodes[40] || keyCodes[83]; // "arrow DOWN"  or "S"
+
+		//	## EditorRotationSystem.
+
+			function EditorRotationSystem(dt, entity){
+
+			//	if ( !entity.editMode && !entity.selected && !entity.rotate ) return;
+
+				try {
+
+					var rad = Math.max(dt, 0.02);
+					var keyCodes = keyboard.keyCodes;
+					var object = scene.getObjectById( entity.id );
+					var UP=38, DOWN=40, LEFT=37, RIGHT=39;
+					var D=68, A=65, W=87, S=83, R=82, F=70;
+
+					if ( entity.translate ) {
+
+					//	var A = keyCodes[65];  var D = keyCodes[68]; //  key "A", key "D"
+					//	var W = keyCodes[87];  var S = keyCodes[83]; //  key "W", key "S"
+
+					//	translation (local coordinates).
+
+						object.rotateOnAxis( axisY,  rad * keyCodes[A]);
+						object.rotateOnAxis( axisY, -rad * keyCodes[D]);
+						object.rotateOnAxis( axisX,  rad * keyCodes[W]);
+						object.rotateOnAxis( axisX, -rad * keyCodes[S]);
+
+					} else { // if ( entity.rotate )
+
+						var up    = keyCodes[UP]    || keyCodes[W]; // "arrow UP"    or "W"
+						var down  = keyCodes[DOWN]  || keyCodes[S]; // "arrow DOWN"  or "S"
+						var left  = keyCodes[LEFT]  || keyCodes[D]; // "arrow LEFT"  or "D"
+						var right = keyCodes[RIGHT] || keyCodes[A]; // "arrow RIGHT" or "A"
+
+					//	rotation (local coordinates).
+
+						object.rotateOnAxis( axisY,  rad * left);
+						object.rotateOnAxis( axisY, -rad * right);
+						object.rotateOnAxis( axisX,  rad * up);
+						object.rotateOnAxis( axisX, -rad * down);
+
+					}
+
+				//	Reset.
+
+					if ( keyCodes[R] ) object.rotation.set(0,0,0);
+					if ( keyCodes[F] ) object.setRotationFromQuaternion(camera.quaternion);
+
+				} catch(err){
+					debugMode && console.error( "EditorRotationError:", err );
+				};
+
+			}
+
+		//	## EditorTranslationSystem.
+
+			function EditorTranslationSystem(dt, entity){
+
+			//	if ( !entity.editMode && !entity.selected && !entity.translate ) return;
+
+				try {
+
+					var keyCodes = keyboard.keyCodes;
+					var object = scene.getObjectById( entity.id );
+					var LEFT=37, RIGHT=39, UP=38, DOWN=40;
+					var E=69, Q=81, D=68, A=65, W=87, S=83, R=82, F=70;
+
+				//	var E = keyCodes[69];         var Q = keyCodes[81]; //  key "E",      key "Q"
+				//	var left     = keyCodes[37];  var D = keyCodes[68]; // "arrow LEFT",  key "D"
+				//	var right    = keyCodes[39];  var A = keyCodes[65]; // "arrow RIGHT", key "A"
+				//	var forwards = keyCodes[38];  var W = keyCodes[87]; // "arrow UP",    key "W"
+				//	var backward = keyCodes[40];  var S = keyCodes[83]; // "arrow DOWN",  key "S"
+
+				//	Move up/down.
+
+					if ( keyCodes[E] || keyCodes[Q] ) (function(up, down){
+
+						var rad = 0;
+						var movementSpeed = Math.max(dt, 0.05);
+						var cameraFrontAngle = cameraControls.phi;
+						var keyboardFrontAngle = 0;
+						if ( up ) keyboardFrontAngle =  Math.PI/2;
+						if (down) keyboardFrontAngle = -Math.PI/2;
+						var direction = rad - cameraFrontAngle + keyboardFrontAngle;
+						var directionOnAxisY = Math.sin(direction);
+						var y = directionOnAxisY * movementSpeed;
+						object.position.y += y; 
+
+					})( keyCodes[E], keyCodes[Q] );
+
+				//	Move left/right/forwards/backward
+
+					if ( entity.rotate && ( 
+					keyCodes[UP]   || keyCodes[DOWN] ||
+					keyCodes[LEFT] || keyCodes[RIGHT] ) ) (function() {
+
+					//	var rad = 6 * Math.PI/4;  // joystick input.
+						var rad = 8 * Math.PI/4;  // keyboard input.
+						var movementSpeed = Math.max(dt, 0.05);
+						var cameraFrontAngle = cameraControls.frontAngle;
+						var keyboardFrontAngle = keyInputControls.frontAngle;
+						var direction = rad - cameraFrontAngle + keyboardFrontAngle;
+						var directionOnAxisX = -Math.sin(direction);
+						var directionOnAxisZ = -Math.cos(direction);
+						var x = directionOnAxisX * movementSpeed;
+						var z = directionOnAxisZ * movementSpeed;
+						object.position.x += x; 
+						object.position.z += z;
+
+					})();
+
+					else if ( !entity.rotate && ( 
+					keyCodes[A]    || keyCodes[W]    || 
+					keyCodes[S]    || keyCodes[D]    ||
+					keyCodes[UP]   || keyCodes[DOWN] ||
+					keyCodes[LEFT] || keyCodes[RIGHT] ) ) (function() {
+
+					//	var rad = 6 * Math.PI/4;  // joystick input.
+						var rad = 8 * Math.PI/4;  // keyboard input.
+						var movementSpeed = Math.max(dt, 0.05);
+						var cameraFrontAngle = cameraControls.frontAngle;
+						var keyboardFrontAngle = keyInputControls.frontAngle;
+						var direction = rad - cameraFrontAngle + keyboardFrontAngle;
+						var directionOnAxisX = -Math.sin(direction);
+						var directionOnAxisZ = -Math.cos(direction);
+						var x = directionOnAxisX * movementSpeed;
+						var z = directionOnAxisZ * movementSpeed;
+						object.position.x += x; 
+						object.position.z += z;
+
+					})();
+
+				//	Reset.
+
+					if ( keyCodes[R] ) object.rotation.set(0,0,0);
+					if ( keyCodes[F] ) object.setRotationFromQuaternion(camera.quaternion);
+
+				} catch(err){
+					debugMode && console.error( "EditorTranslationError:", err );
+				};
+
+			}
+
+		//	## EditorScalarSystem.
+
+			function EditorScalarSystem(dt, entity){
+
+			//	if ( !entity.editMode && !entity.selected && !entity.scalar ) return;
+
+				try {
+
+				} catch(err){
+					debugMode && console.error( "EditorScalarError:", err );
+				};
+
+			}
+
+		</script>
+
+		<script>
 
 		//	Loading systems.
 
@@ -300,10 +595,7 @@
 				var loader = new THREE.FBXLoader();
 				loader.load( url, function( group ){
 					debugMode && console.log( group );
-
-				//	create entities list.
-					var entities = {};
-					entities[ group.uuid ] = group.id;
+					entities.push({id: group.id});
 
 				//	All children in group have scale 100.
 					group.traverse(function( child ){
@@ -316,7 +608,7 @@
 					//	Create child entities.
 						if ( child.type == "Mesh" 
 						  || child.type == "SkinnedMesh" ) {
-							entities[ child.uuid ] = child.id;
+							entities.push({id: child.id});
 						}
 					});
 
@@ -328,8 +620,10 @@
 					//	Create animation controller.
 				//	}
 
-				//	Add toRemove flag.
-					entity.toRemove = true;
+				//	Add toRemoved flag.
+					entity.toRemoved = true;
+
+					debugMode && console.log( entities );
 				});
 			}
 
